# cloth-simulator

./: CMakeLists.txt  README.md  build.sh  main.cpp  play.sh  run.sh
include/: constraint.h  handle_input.h  particle.h
src/: constraint.cpp  handle_input.cpp  particle.cpp
